@@ -97,12 +97,16 @@ AC_DEFUN([PILOT_LINK_CHECK],[
 ])
 
 AC_DEFUN([GNOME_PILOT_HOOK],[
-	AC_PATH_PROG(GNOME_PILOT_CONFIG,gnome-config,no)
+	AC_PATH_PROG(GNOME_CONFIG,gnome-config,no)
 	AC_CACHE_CHECK([for gnome-pilot environment],gnome_cv_pilot_found,[
-		if test x$GNOME_PILOT_CONFIG = xno; then
+		if test x$GNOME_CONFIG = xno; then
 			gnome_cv_pilot_found=no
 		else
-			gnome_cv_pilot_found=yes
+			if $GNOME_CONFIG gpilot 2> /dev/null; then
+				gnome_cv_pilot_found=yes
+			else
+				gnome_cv_pilot_found=no
+			fi
 		fi
 	])
 	AM_CONDITIONAL(HAVE_GNOME_PILOT,test x$gnome_cv_pilot_found = xyes)
