@@ -1,3 +1,9 @@
+2000-04-10  Dan Winship  <danw@helixcode.com>
+
+	* gnome-pilot.m4 (PILOT_LIBS): Fix a bug introduced in the
+	gnome-pilot-config to "gnome-config gpilot" change that caused not
+	having pilot-link installed to become a fatal error.
+
 2000-02-26  James Henstridge  <james@daa.com.au>
 
 	* gnome-gettext.m4: fix up check of LINGUAS variable so that we don't
